# proyecto-tajamar

./: app.py  gastos.py  pyproject.toml  test.py
gastos/: main.py  test_gastos.py
proyecto-gastos/: pyproject.toml
tareas/: ui.py
