[project]
name = "tajamar"
version = "0.0.0"
description = ""
authors = [
    {name = "Raul",email = "raulmontesan1@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "colorama (==0.4.6)",
    "iniconfig (==2.3.0)",
    "markdown-it-py (==4.2.0)",
    "mdurl (==0.1.2)",
    "packaging (==26.2)",
    "pluggy (==1.6.0)",
    "pygments (==2.20.0)",
    "pytest (==9.0.3)",
    "rich (==15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
